--- a/systemverilog&功能验证/数据类型&编程结构.md
+++ b/systemverilog&功能验证/数据类型&编程结构.md
@@ -8,3 +8,11 @@
 - 联合体/结构体
 - 字符串
 - 类
+
+------
+
+##### 两态
+
+Sv 引入了两态的数据类型来减少仿真器对内存的使用和提高仿真的运行效率， 其中 bit 是无符号数， 其他四个是有符号数：short int/int/longint/byte
+
+![image-20220208172002399](../pic/image-20220208172002399.png)
