--- a/浮点数据数值计算.md
+++ b/浮点数据数值计算.md
@@ -14,9 +14,13 @@ IEEE 754 标准是IEEE二进位浮点数算术标准(IEEE Standard for Floating-
 
 ![img](pic/v2-42572e70751c749af355256a6b9f3ae8_b.jpg)
 
+
+
 可以看出表达的数据范围看fp32，bf16，tf32，pxr24和ef32都是一样的，因为大家能表达的都是-2^254 ~ 2^255 这个大概范围。fp24到表达范围比上面这些小，是 -2^126 ~ 2^127 
 
-从精度上看fp32 > pxr24 > ef32 > tf32 > bf16，燧原的ef32都精度比Nvidia的fp32的精度多了一位，但都显著优于google的bf16，燧原的ef32，Nvidia的tf32都是使用fp16的计算性能像fp32的表达范围靠齐的一种尝试。![img](pic/v2-de3191828763cafdaa92f75035130bbf_1440w.jpg)
+从精度上看fp32 > pxr24 > ef32 > tf32 > bf16，燧原的ef32都精度比Nvidia的fp32的精度多了一位，但都显著优于google的bf16，燧原的ef32，Nvidia的tf32都是使用fp16的计算性能像fp32的表达范围靠齐的一种尝试。
+
+![img](pic/v2-de3191828763cafdaa92f75035130bbf_1440w.jpg)
 
 
 
@@ -24,9 +28,7 @@ IEEE 754 标准是IEEE二进位浮点数算术标准(IEEE Standard for Floating-
 
 ##### 浮点数据表示
 
-以FP16为例子，第一位符号位sign表示正负符号，接着5位表示指数exponent，最后10位表示分数fraction。公式为：
 
-![[公式]](pic/equation-20220208182411400)
 
 FP16可以表示的最大值为 0 11110 1111111111，计算方法为：
 
@@ -37,6 +39,8 @@ FP16可以表示的最小值为 0 00001 0000000000，计算方法为：
 ![[公式]](https://www.zhihu.com/equation?tex=+%28-1%29%5E%7B-1%7D%5Ctimes2%5E%7B1-15%7D%3D2%5E%7B-14%7D%3D6.104%C3%9710%5E%7B-5%7D%3D-65504)
 
 因此FP16的最大取值范围是[-65504 - 66504]，能表示的精度范围是 ![[公式]](https://www.zhihu.com/equation?tex=2%5E%7B-24%7D) ，超过这个数值的数字会被直接置0。
+
+
 
 **根据IEEE 754标准，任意一个二进制浮点数都可以表示成以下形式：**
 
@@ -96,6 +100,8 @@ FP16可以表示的最小值为 0 00001 0000000000，计算方法为：
 
 ##### BF16
 
+[(18条消息) 深度学习与bfloat16（BF16）_鱼落池中-CSDN博客_bfloat16](https://blog.csdn.net/Night_MFC/article/details/107869478?utm_medium=distribute.pc_relevant.none-task-blog-2~default~baidujs_baidulandingword~default-0.pc_relevant_default&spm=1001.2101.3001.4242.1&utm_relevant_index=3)
+
 ![img](pic/2508854-20210818154056839-671903724.png)
 
 <u>BF16数字表示为：</u>
@@ -105,6 +111,10 @@ FP16可以表示的最小值为 0 00001 0000000000，计算方法为：
 <u>这些16位数字提供了谷歌所追求的高吞吐量需求，同时保留了FP32的近似动态范围（该系统可以表示的数字的整个范围），因为指数是相同的大小。</u>
 
 ‘BF16’，专为人工智能(AI)/深度学习(DL)应用优化发展而来，有时也称‘BFloat16’或‘Brain Float 16’。它一开始是由Google Brain团队发明，并用于其第三代Tensor Processing Unit (TPU)，如今已被Google、英特尔(Intel)、Arm等许多公司的AI加速器广泛采用。
+
+深度学习中一般不需要FP64，FP32这种高精度的浮点格式。虽然这两种浮点格式数据精度高，但也增加了存储成本和处理过程中的时间成本。如果有一种数据格式能解决FP64，FP32这两种数据格式的这两个缺点，同时又能满足一定的精度要求，那无疑会大大提高深度学习模型的推理速度和部署灵活性。
+
+这种数据格式就是BF16，使用BF16算法的预测精度与FP32相似，但不如FP32精确（谷歌曾说过，这是因为神经网络对指数的大小比尾数敏感得多）。对于大多数应用程序，尤其是计算机视觉和语音方面，这种折衷是可以接受的。
 
 采用16位脑浮点(brain floating point)格式的BF16，主要概念在于透过降低数字的精度，从而减少让张量(tensor)相乘所需的运算资源和功耗。「张量」是数字的三维(3D)矩阵；张量的乘法运算即是AI计算所需的关键数学运算。
 
@@ -150,6 +160,8 @@ FP16可以表示的最小值为 0 00001 0000000000，计算方法为：
 
 [(18条消息) 浮点加法、减法, 乘法、除法运算_嵌入式技术在路上-CSDN博客_浮点数除法](https://blog.csdn.net/xingqingly/article/details/18981671?ops_request_misc=%7B%22request%5Fid%22%3A%22164433271416780269811687%22%2C%22scm%22%3A%2220140713.130102334..%22%7D&request_id=164433271416780269811687&biz_id=0&utm_medium=distribute.pc_search_result.none-task-blog-2~all~sobaiduend~default-2-18981671.first_rank_v2_pc_rank_v29&utm_term=浮点运算&spm=1018.2226.3001.4187)
 
+<img src="https://img-blog.csdnimg.cn/20181125213041209.JPG" alt="在这里插入图片描述" style="zoom:50%;" />
+
 ##### 1、加减法
 
 例子：
@@ -176,6 +188,8 @@ FP16可以表示的最小值为 0 00001 0000000000，计算方法为：
 
 *注：要注意0舍1入的原则。之所以右移一位，尾数补的是1，是因为隐藏位的数值为1（默认是不存储的，只有读取的时候才加上）*
 
+
+
 ###### **② 尾数求和**
 
 `0.1100110011001100110011001100110011001100110011001101`
@@ -186,7 +200,21 @@ FP16可以表示的最小值为 0 00001 0000000000，计算方法为：
 
 `10.0110011001100110011001100110011001100110011001100111`
 
+
+
 ###### **③ 规格化**
+
+规格化处理主要是针对浮点数的尾数部分，规格化的尾数格式要求如下:
+尾数采用原码表示形式时：正数的规格化格式为：0.1XXX，负数的规格化形式为1.1XXX。
+尾数采用补码表示形式时，正数的规格化格式为：0.1XXX，负数的规格化形式为：1.0XXX。
+以上的最高位均代表符号位(0代表正数，1代表负数)，关键是看小数点后面的数的格式。
+
+**凡不符合以上格式要求的尾数均要进行规格化，对以上规格化格式进行总结可以得出：**
+
+符号位与尾数最高位不一致才算是规格化，一致为非规格化。如1.0XXX，0.1XXX(最前面的为符号位)之类的尾数都是规格化的数，而1.1XXX，0.0XXX为非规格化的数，另外，如果尾数大余1，也是非规格化数。
+对于非规格化的尾数需要进行相应的处理，处理方式又分为"左规"和"右规"，所谓"左规"就是尾数需要向左移位，每移1位阶码值减1，直到为规格化数为止，对应"右规"就是尾数要向右移位，每移1位阶码值减1，直到为规格化数为止。
+
+**进位溢出：右规；负数：左规**
 
 针对步骤②的结果，需要**右规**（即尾数右移1位，阶码加1）
 
@@ -194,19 +222,107 @@ sum = 0.1 + 0.2 = `0,01111111101;1.001100110011001100110011001100110011001100110
 
 *注：右规操作，可能会导致低位丢失，引起误差，造成精度问题。所以就需要步骤④的舍入操作*
 
+
+
 ###### **④ 舍入（0舍1入）**
 
 sum = `0,01111111101;1.0011001100110011001100110011001100110011001100110100`
+
+<img src="pic/20181125213140482-20220209100621758.JPG" alt="在这里插入图片描述" style="zoom:50%;" />
+
+
 
 ###### **⑤ 溢出判断**
 
 根据阶码判断浮点运算是否溢出。此处阶码01111111101即不上溢，也不下溢。
 
+
+
+------
+
+##### 2、乘除法
+
+[(18条消息) 浮点数的乘除法运算_zs_Dec04的博客-CSDN博客_浮点数乘法](https://blog.csdn.net/qq_47114658/article/details/111599175?ops_request_misc=%7B%22request%5Fid%22%3A%22164437243416780274150628%22%2C%22scm%22%3A%2220140713.130102334..%22%7D&request_id=164437243416780274150628&biz_id=0&utm_medium=distribute.pc_search_result.none-task-blog-2~all~top_click~default-1-111599175.first_rank_v2_pc_rank_v29&utm_term=浮点数乘法&spm=1018.2226.3001.4187)
+
+
+
+运算规则:
+
+两个浮点数相乘，**乘积的阶码**应为**相乘两数的阶码之和**，**乘积的尾数**应为**相乘两数的尾数之积**。
+
+两个浮点数相除，**商的阶码**为**被除数的阶码减去除数的阶码**，**尾数**为**被除数的尾数除以除数的尾数所得的商**。
+
+
+
+假设有两个浮点数x和y：								<img src="pic/image-20220209101317035.png" alt="image-20220209101317035" style="zoom:67%;" />
+
+
+
+那么有：										<img src="pic/image-20220209101351193.png" alt="image-20220209101351193" style="zoom:33%;" />
+
+
+
+浮点数乘除运算不存在两个数的对阶问题，故比浮点数的加减法还要简单。
+
+
+
+###### ① 0操作数检查
+
+对于乘法:检测两个尾数中是否一一个为0，若有一个为0,则乘积必为0,不再做其他操作;若两尾数均不为0, 则可进行乘法运算。
+
+对于除法:若被除数x为0，则商为0;若除数y为0，则商为∞，另作处理。若两尾数均不为0，则可进行除法运算。
+
+
+
+###### ② 阶码加减操作
+
+在浮点乘除法中，对阶码的运算只有4种，即+1、-1、两阶码求和以及两阶码求差。当然，在运算的过程中，还要检查是否有溢出，因为两个同号的阶码相加或异号的阶码相减可能产生溢出。
+
+
+
+###### ③ 尾数乘/除操作
+
+对于乘法:两个浮点数的尾数相乘可以随意选取一种定点小数乘法运算来完成。
+
+对于除法:同上。
+
+[(18条消息) 计算机组成原理之定点乘法运算详解_新西兰做的饭的博客-CSDN博客_定点乘法运算过程详解](https://blog.csdn.net/qq_45929428/article/details/120586983?spm=1001.2101.3001.6650.3&utm_medium=distribute.pc_relevant.none-task-blog-2~default~CTRLIST~Rate-3.pc_relevant_default&depth_1-utm_source=distribute.pc_relevant.none-task-blog-2~default~CTRLIST~Rate-3.pc_relevant_default&utm_relevant_index=6)
+
+[(18条消息) Verilog基础知识（定点小数运算）_maxwell2ic的博客-CSDN博客_verilog定点数计算](https://blog.csdn.net/maxwell2ic/article/details/81076475?utm_medium=distribute.pc_relevant.none-task-blog-2~default~baidujs_utm_term~default-4.pc_relevant_default&spm=1001.2101.3001.4242.3&utm_relevant_index=7)
+
+
+
+###### ④ 结果规格化及舍入处理
+
+直接采用浮点数加减法的规格化和舍入处理方式：
+
+1. 无条件地丢掉正常尾数最低位之后的全部数值。这种办法被称为截断处理，其好处是处理简单，缺点是影响结果的精度。
+
+2. 运算过程中保留右移中移出的若干高位的值，最后再按某种规则用这些位上的值进行修正尾数。这种处理方法被称为舍入处理。
+
+    
+
+    **当尾数用原码表示时**，舍入规则比较简单。最简便的方法是，只要尾数的最低位为1，或移出的几位中有为1的数值，就使最低位的值为1.另一种是0舍1入法，即当丢失的最高位的值为1时，把这个1加到最低数值位上进行修正。
+
+    **当尾数用补码表示时**，所用的舍入规则应该与用原码表示时产生相同的处理效果。具体规则是:
+
+    1)当丢失的各位均为0时，不必舍入。
+
+    2)当丢失的各位数中的最高位为0，且以下各位不全为0时，或者丢失的最高位为1,
+
+    3)当丢失的最高位为1,以下各位不全为0时，执行在尾数最低位加1的修正操作。
+
+    
+
+    ![image-20220209102930765](pic/image-20220209102930765-4373773-4373777.png)
+
+    
+
 ------
 
 #### Summary
 
-不同的浮点类型可以给算法和应用带来非常大的自由度，可以选择最合适的设计来满足功耗、性能、精度的要求。尤其对于那些从应用到芯片都自己开发的厂商，比如MSFP和Tesla Dojo
+不同的浮点类型可以给算法和应用带来非常大的自由度，可以选择最合适的设计来满足功耗、性能、精度的要求。尤其对于那些从应用到芯片都自己开发的厂商，比如MSFP和Tesla Dojo。
 
 硬币的另一面则是不同的浮点类型可能并不好移植到别的硬件，比如CFloat8 就很难在Nvidia的硬件上得到加速；同样，TF32可能只能在Nvidia上得到支持。
 
